Work on Search. Add styles, Issue in Global Search. I've been working on this search thing, and now it's almost 7, so I'm going to save the issue part for tomorrow, it might be a magento bug or it could just be something small, but i'll have to just look into it tomorrow. but I have styled up the search results pages. I have looked into the header search, and, as it's hooked up now, it does not return any results. The advanced search does, so I'm not entirely sure why this is not working on the quick search. I did some looking online, and it seems like this is a common problem, and perhaps even a magento bug. I did not find a good solution and after a few attempts, i thought my time might be better spent wrapping up the styling i was in the middle of, so i could finish of this day at a good stopping point. So tomorrow i will pick up on fixing the global search bug. But that rounds off the day pretty well, I'd say. Some server config this morning, preparing for live launch (which it's a good thing i'm starting this now, more aspects need attention than i'd hoped), got the news letter running. And got some progress on the search. I'll make a note in the TODO section of the README about the global search bug.
Former-commit-id: 391094dd34f4cdf5666740f1b3fbdd4a6b9e5c78

--- a/skin/frontend/default/rofcustom/css/layout.css
+++ b/skin/frontend/default/rofcustom/css/layout.css
@@ -65,6 +65,8 @@ a[href="javascript:void(0)"],
 }
 .displaynone { display: none !important; }
 
+.inlineblock { display: inline-block !important; }
+
 .show-mobile.no-display,
 .show-mobile-inline.no-display {
     display: none;
